--- a/Projet_C#_A3.csproj
+++ b/Projet_C#_A3.csproj
@@ -13,4 +13,15 @@
     <PackageReference Include="System.Drawing.Common" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="distances.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ressources/*.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  
+
 </Project>
